--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www"
+    "start:dev": "pm2 kill && pm2 start ecosystem.config.cjs --env development --watch && pm2 logs",
+    "start:prod": "pm2 kill && pm2 start ecosystem.config.cjs --env production"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.13.0",
     "pm2": "^6.0.5"
   }
 }
