--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:prod": "pm2 kill && pm2 start ecosystem.config.cjs --env production"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
