feat : 관리자 로그인 시 이메일 인증 가능

--- a/.gitignore
+++ b/.gitignore
@@ -254,7 +254,7 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-# env
+# .env
 ecosystem.config.cjs
 
 # End of https://www.toptal.com/developers/gitignore/api/node,intellij
