--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
+    "nodemailer": "^6.10.0",
     "pm2": "^6.0.5"
   }
 }
