--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0",
