--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pm2": "^6.0.5"
   }
