--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start:dev": "pm2 kill && pm2 start ecosystem.config.cjs --env development --watch && pm2 logs",
-    "start:prod": "pm2 kill && pm2 start ecosystem.config.cjs --env production"
+    "start:prod": "pm2 kill && pm2 start ecosystem.config.cjs --env production",
+    "start:stg": "pm2 kill && pm2 start ecosystem.config.cjs --env stage"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
